--- a/source/css/ticket.scss
+++ b/source/css/ticket.scss
@@ -120,11 +120,14 @@ body {
 
         p.info {
             margin:6px 0 0;
+
             span {
                 display:inline-block;
                 vertical-align:top;
                 font-size:16px;
                 padding:0 5px 0;
+                white-space:nowrap;
+                word-break:keep-all;
             }
         }
 
