--- a/source/css/ticket.css
+++ b/source/css/ticket.css
@@ -816,6 +816,9 @@ body div#content p.info span {
   vertical-align: top;
   font-size: 16px;
   padding: 0 5px 0;
+  white-space: nowrap;
+  word-break: keep-all;
+  min-width: 126px;
 }
 
 body div#content p.seat {
