--- a/source/css/ticket.scss
+++ b/source/css/ticket.scss
@@ -128,6 +128,7 @@ body {
                 padding:0 5px 0;
                 white-space:nowrap;
                 word-break:keep-all;
+                min-width:126px;
             }
         }
 
