--- a/source/css/ticket.css
+++ b/source/css/ticket.css
@@ -773,6 +773,7 @@ body header button {
 body div#content {
   display: inline-block;
   width: 100%;
+  min-width: 100%;
   background: #333333;
   color: #fff;
   text-align: center;
