--- a/source/css/ticket.scss
+++ b/source/css/ticket.scss
@@ -84,6 +84,7 @@ body {
     div#content {
         display:inline-block;
         width:100%;
+        min-width:100%;
         background:#333333;
         color:#fff;
         text-align:center;
